# aoc_2023

./: .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: ci.yml  makefile.yml
src/: utils.py
src/day_1/: solution.py
src/day_2/: solution.py
src/day_3/: solution.py
src/puzzles/day_1/: solution.py
tests/: test_1.py  test_day_1.py  test_day_2.py  test_day_3.py  test_hello_world.py  test_utils.py
