[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["Chris Spann <cspanndev@gmail.com>"]
readme = "README.md"
packages = [{ include = "src", from = "." }, { include = "*", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
