[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["Chris Spann <cspanndev@gmail.com>"]
readme = "README.md"
packages = [{ include = "src", from = "." }, { include = "*", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"
ruff = "^0.1.6"

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
omit = ["*/__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
